--- a/index.html
+++ b/index.html
@@ -18,6 +18,25 @@
 	</form>
 	<br>
 
+		<form action="#" id="form2" onsubmit="matchLetterss(this)">
+		<h2>Посимвольное сравнение слов второй способ</h2>
+		<input type="text" name="string11" placeholder=" Экзекуция"><br>
+		<input type="text" name="string22" placeholder=" Нострадамус"><br>
+		<input type="submit" id="btn" value="сравнить =>">
+		<span></span>
+	</form>
+<br>
+		
+			<h2>callback</h2>
+			<input type="button" id="btn" value="Запустить" onclick="question('Колбэк сработает?', yes, no)">
+
+			<br>
+			<br>
+
+<script>
+
+</script>
+		
 	<script src="js/main.js"></script>
 </body>
 </html>
